kubernetes/argocd/applications/markdown-dot-kubeden/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: markdown-dot-kubeden-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: markdown.kubeden.io
spec:
  tls:
  - hosts:
    - markdown.kubeden.io
    secretName: markdown-dot-kubeden-client-tls
  rules:
  - host: markdown.kubeden.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: markdown-dot-kubeden-service
            port: 
              number: 80
